--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,3 @@
-spring.application.name=GPT_bot
+#spring.application.name=GPT_bot
+bot.name=@optimus_gpt_bot
+bot.key=7596048918:AAHRp9JQZqxanucuw-XKfSWNmu8AgEhMq0c
